# holo-envoy

./: .env.example  .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  app-config.yml  default.nix  example-dna-config.yml  jobsets.nix  nixpkgs.nix  package-lock.json  package.json  pkgs.nix  release.nix  server.js  shell.nix  wormhole.md
.circleci/: config.yml
.github/: CODEOWNERS  pull_request_template.md  settings.yml
.github/workflows/: main.yml
holochain-conductor/: conductor.master.toml
html/: chaperone.html
lib/: index.js
rpc-websocket-wrappers/: client.js
script/: app-config.yml  setup-install-bundle.sh  test-shim-init.js
script/install-bundles/: Cargo.toml  config.yaml
script/install-bundles/src/: lib.rs  main.rs
scripts/: fetch-dna.sh
src/: const.ts  index.ts  mocks.ts  shim.js  tsconfig.json  utils.ts  wss.ts
src/errors/: custom-error.ts  holo-error.ts  timeout-error.ts  user-error.ts
src/interfaces/: app-dna.interface.ts  envoy-config-interface.ts  hosted-app-config-interface.ts
src/websocket-wrappers/: async_with_timeout.ts  connection_monitor.ts  hc-admin-web-socket.ts  hc-app-web-socket.ts  holochain.ts
tests/: app-config.yml  genconfig.js  holochain-config.yaml  hosted-happs.json  install_happs.js  mock_conductor.js  setup_chaperone.js  setup_conductor.js  setup_envoy.js  setup_http_server.js  utils.js
tests/e2e/: test_chaperone.js  test_membrane.js  test_resilience.js  test_resiliency.js  test_signing.js  test_wormhole.js
tests/integration/: test_server.js
tests/test-dna/: Cargo.toml
tests/test-dna/test.dna.workdir/: dna.json
tests/test-dna/zomes/test/: Cargo.toml
tests/test-dna/zomes/test/src/: lib.rs
tests/unit/: test_init.js  test_server.js  test_server_mock_conductor.js  test_wormhole.js  test_ws_wrapper.js
tmp/: app.js  client.js
websocket-wrappers/: async_with_timeout.js  utils.js
websocket-wrappers/holochain/: client.js
websocket-wrappers/rpc/: client.js
